Changed default garbage collector to ZGC for `server`